@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<test xmlns="http://www.example.com/Test" 
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+  xsi:schemaLocation="http://www.example.com/Test bug167754.xsd"> 
+        <child> 
+                <foo/> 
+        </child> 
+        <child> 
+                <foo/> 
+                <joe/> 
+        </child> 
+</test> 
