@@ -1,0 +1,29 @@
+<?xml version="1.0"?>
+<xsd:schema  
+        xmlns:xsd="http://www.w3.org/2001/XMLSchema"  
+        xmlns:target="http://www.example.com/Test"  
+        targetNamespace="http://www.example.com/Test"  
+        version="1.0"  
+        elementFormDefault="qualified" >  
+    
+        <xsd:element name="foo" />  
+        <xsd:element name="bar" />  
+        <xsd:element name="joe" />  
+  
+        <xsd:complexType name="dominik">  
+                <xsd:all>  
+                        <xsd:element minOccurs="0" ref="target:foo" />  
+                        <xsd:element minOccurs="0" ref="target:bar" />  
+                        <xsd:element minOccurs="0" ref="target:joe" />  
+                </xsd:all>  
+        </xsd:complexType>  
+  
+        <xsd:element name="test">  
+                <xsd:complexType>  
+                        <xsd:sequence>  
+                                <xsd:element maxOccurs="unbounded" name="child" type="target:dominik" />  
+                        </xsd:sequence>  
+                </xsd:complexType>  
+        </xsd:element>  
+  
+</xsd:schema>
